# playground

./: .redhat-ci.yml  .travis.yml  Dockerfile  README.md  atomic-test.ks.in  atomichost-cloud2vagrant.sh  broken.txt  cgwalters-playground.spec  coreos-run-qemu  coreos-run-qemu.9p  ghiper.c  newtestfile4  nova-list-ips.py  openshift-collect-coredumps.sh  print-getdents.c  qcow2-to-vagrant  run-coreos-hostile-entropy  testing.md  testing.txt
.github/workflows/: full.yml  tests.yml
202307/: chroottest.go  createfiles.sh  reproduce-ostree-inode-bug.sh  reprovison-xfs-3T.bu  reprovison-xfs.bu  tpm2.bu
202310/: go.mod  go.sum
202310/cmd/: zstd.go
202312/bootc-dev-custom/: Containerfile
202312/bootc-test-opt/: Containerfile  README.md
202312/bootc-with-llm/: Containerfile  README.md
beaker/: bkr-job.xml
ci/: ci-commitmessage-submodules.sh
cve-2020-1436/: cve-cap-net-raw.c
docker/c7sh/: run.sh
docker/doctoc/: Dockerfile
docker/fsh/: run.sh
fcct/: autologin.fcct  ssh-basic.ign  var.fcct  var.ign
gdbus-exit-on-idle/: Makefile  gdbus-exit-on-idle-daemon.c
ignition/: rhcos-encrypt-tpm.json  rhcos-raid-containers.json  rhcos-two-nvme.sh
kube-manifests/: sleep.yaml
old/: Dockerfile  README.md  atomic-test.ks.in  github-repo-file-issue  nova-list-ips.py  openshift-collect-coredumps.sh  print-getdents.c
old/rust/imagestream-ostree-hash/: Cargo.toml
old/rust/imagestream-ostree-hash/src/: imagestream-ostree-hash.rs
rpmostree-jigdo-demo/: README.md
rust/: rust-binary.spec
scripts/: commandspec.rs  virt-install-coreos.rs
specs/: oci-kvm-hook.spec
(+72 files in other folders)
