[package]
name = "imagestream-ostree-hash"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]

[dependencies]
clap = "~2.28"
failure = "0.1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
name = "imagestream-ostree-hash"
path = "src/imagestream-ostree-hash.rs"

[profile.release]
panic = "abort"
lto = true